Start adding detach system

--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -7,7 +7,8 @@
         "GUID:206779980ac58453ea65e900299ccf71",
         "GUID:a22362b82293644e1bbe51356c008d63",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:1a5d1583acdc3ed44bebbfc167b9c1e0"
+        "GUID:1a5d1583acdc3ed44bebbfc167b9c1e0",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
