--- a/Assets/Scripts/GameAssembly.asmdef
+++ b/Assets/Scripts/GameAssembly.asmdef
@@ -11,7 +11,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:75dda67fd8093c7438cd2dcbdcc1f626",
         "GUID:746b3516f543efe4296c5cdcbd0576f4",
-        "GUID:fe685ec1767f73d42b749ea8045bfe43"
+        "GUID:fe685ec1767f73d42b749ea8045bfe43",
+        "GUID:dc960734dc080426fa6612f1c5fe95f3",
+        "GUID:65a004a26c89ac5468e8d4b4b057f1c8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
