--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -19,6 +19,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.xr.picoxr": "file:C:/Users/women/Downloads/PICO Unity Integration SDK_215",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
